--- a/step_definitions/Steps_Parse_Features.cls
+++ b/step_definitions/Steps_Parse_Features.cls
@@ -116,7 +116,7 @@ End Sub
 
 Public Sub Then_the_given_step_is_assigned_to_the_feature_F07FF8233D0D(example_context As TContext)
     'Then the Given step is assigned to the feature
-    TSpec.expect(example_context.get_value("parsed_feature").background.steps(1).OriginalStepDefinition).to_be "Given one step"
+    TSpec.expect(example_context.get_value("parsed_feature").background.steps(1).OriginalStepLine).to_be "Given one step"
 End Sub
 
 Public Sub Then_a_feature_named_STR_is_parsed_2E9486C04330(example_context As TContext, step_expressions As Collection)
