--- a/step_definitions/Steps_parse_docstrings.cls
+++ b/step_definitions/Steps_parse_docstrings.cls
@@ -9,12 +9,12 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Then_the_first_step_has_an_expression_451F9158BDF6(example_context As TContext)
-    'Then the first step has an expression
+Public Sub Then_the_first_step_has_an_docstring_451F91589372(example_context As TContext)
+    'Then the first step has an docstring
     Dim first_step As TStep
     
     Set first_step = example_context.get_value("step_list")(1)
-    TSpec.expect(first_step.Expressions.Count).to_be 1
+    TSpec.expect(first_step.docstring).not_to_be vbNullString
 End Sub
 
 Public Sub Then_the_function_name_for_the_first_step_ends_wit_79EB11152D22(example_context As TContext, step_expressions As Collection)
@@ -28,13 +28,12 @@ Public Sub Then_the_function_name_for_the_first_step_ends_wit_79EB11152D22(examp
     TSpec.expect(Right(function_name, 3)).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_first_step_has_one_string_parameter_with__004CDB252EF7(example_context As TContext)
-    'And the first step has one string parameter with two lines
+Public Sub Then_the_docstring_of_the_first_step_is_STR_99C591958B2D(example_context As TContext, step_expressions As Collection)
+    'And the docstring of the first step is
     Dim first_step As TStep
     
     Set first_step = example_context.get_value("step_list")(1)
-    TSpec.expect(TypeName(first_step.Expressions(1))).to_be "String"
-    TSpec.expect(UBound(Split(first_step.Expressions(1), vbLf))).to_be 1
+    TSpec.expect(first_step.docstring).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_first_line_of_the_steps_docstring_is_empt_C94363C3329C(example_context As TContext)
